app/assets/stylesheets/mw-runtime-base.scss
/* ... */
.interactive-mod {
  width: 100%;
  z-index: 100;
  overflow: hidden;

  img {
    max-width: 100%;
  }
}

.questions-mod {
  margin-bottom: 52px;
  position: relative;
}

.colorbox {
  cursor: zoom-in;
}

.under-image {
  .fullscreen {
    float: right;
    a {
      outline: none;
      user-select: none;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      -o-user-select: none;
    }
    img {
      height: 32px;
      width: 32px;
      padding: 4px;
    }
  }
  .caption {
    display: block;
    font-size: 14px;
    margin: 0px;
  }
  .credit {
    display: block;
    font-size: 10px;
    font-style: italic;
    margin: 0px;
    a {
      text-decoration: underline;
    }
  }
}

.question {
  margin: 0 0 52px;
  @extend .cf;
  .answer_text {
    font-style: italic;
    font-size: 0.9em;
  }
}

.challenge {
  .question-hdr {
    background: transparent;
    padding: 4px 0;

    .h5 {
      color: #333;
      font-weight: bolder;
      text-shadow: none;
    }
  }
  .question-bd {
    border: none;
    padding: 0;
  }

  &.callout {
    .question-hdr, .question-hdr-collapse {
      background: darken($black-15, 20%);
      display: block;
      padding: 4px 8px;

      .h5 {
        color: #fff;
        font-weight: normal;
        @include drk-txt-shadow($black-15);
      }
    }
    .question-bd {
      background: $black-5;
      padding: 20px 20px 13px;
      @extend .mod-border-rounded;
    }
  }
} // end .challenge


.question-hdr, .question-hdr-collapse {
  background: $med-blue;
  position: relative;
  padding: 4px 8px;
  clear: both;

  .h5 {
    font-family: $lato-reg;
    font-weight: normal;
    position: relative;
    color: #fff;
    font-size: 16px;
    @include drk-txt-shadow($med-blue);
  }
}

.question-bd {
  padding: 26px;
  @extend .mod-border-rounded;
}

.jcarousel {
  .question {
    margin: 0 20px 0 0;
  }
} // .jcarousel

// *********************************************
//  9. Styling for typographic elements
// *********************************************

.intro-mod,
.content-mod {
  font-size: 16px;
  line-height: 1.35;
  ol,
  ul,
  dl,
  blockquote,
  p {
    margin-top: 16px;
    margin-bottom: 16px;
  }
}

// disable extra margin on first and last paragraphs in a module
.intro-mod,
.question-bd {
  p {
    &:first-child {
      margin-top: 0;
    }
    &:last-child {
      margin-bottom: 0;
    }
  }
}

// ordered lists

.intro-mod,
.content-mod {
  ol {
    counter-reset: li;
    list-style: none;
    *list-style: decimal;
    padding: 0;
    margin: 16px 0;

    ol, ul {
      margin: 16px 0 16px 16px;
    }

    > li {
      margin-bottom: 13px;
      position: relative;
      &:before {
        content:counter(li)".";
        counter-increment:li;
        margin-right: 8px;
        font-weight: bold;
        font-size: 0.65em;
        padding: 3px 5px;
        background-color: $black-5;
        position: relative;
        top: -2px;
        @include border-radius(2px);
      }
    } //li
  }//ol
}//content-mod


// unordered lists
.intro-mod,
.content-mod {
  ul {
    list-style: square;
    margin-left: 16px;

    ul, ol {
      margin: 16px 0 16px 16px;
    }

    li {
      margin-bottom: 13px;
    }
  }//ul
}//content-mod


//definition lists
.intro-mod,
.content-mod {
  dl {

  }
  dt {
    font-weight: bold;
    margin-top: 13px;
  }
  dd {
    margin-left: 16px;
  }
}


// text areas
.intro-mod,
.content-mod {
  form {
  }

  label {
    display: block;
    margin-bottom: 4px;
  }
  textarea {
    width: 100%;
    padding: 16px;
    border: 1px solid $black-15;
    font-family: $lato-reg;
    @include border-radius(8px);
  }

  em.credit {
    display: block;
    font-size: 0.75em;
    text-align: right;
    color: $black-15;
  }
}

// radio buttons
.intro-mod,
.content-mod {
  label {
    margin-bottom: 13px;
  }
  input {
    margin-right: 8px;
    &[type="checkbox"]{
	    margin-bottom: 3px;
    }
  }
  .page-index {
      border: 0px;
  }
}
// screen shot answer
.image-answer {
  border: 3px dashed $lt-blue;
  padding: 40px;
  text-align: center;
  @include border-radius(10px);

  &.complete {
    margin-bottom: 12px;
  }
}

.image-file {
  @include border-radius(5px);
  background-color: #FFF;
  text-align: center;

  img {
    max-width: 100%;
    opacity: 0.6;
    @include border-radius(5px);
  }

  p {
    margin: 0;
  }
  a {
    font-size: 11px;
    color: $btn-blue;
    text-transform: uppercase;
    float: right;
  }
}

// submit
input[type="submit"],
button[type="submit"] {
  display: block;
  margin: 0 auto;
  @include btn ( lighten($btn-orange, 8%), $btn-orange2 );
  padding: 15px 30px;
  font-size: 15px;
  color: #fff;
  @include drk-txt-shadow($btn-orange);
  &:focus {
    box-shadow: 0 0 0 1px #fff, 0 0 2px 3px #6fc6da;
  }
}

// button
input[type="button"],
button[type="button"] {
  border: 0;
  @include btn;
  &:focus {
    box-shadow: 0 0 0 1px #fff, 0 0 2px 3px #6fc6da;
  }
}
input:disabled {
  opacity: 0.3;
}
.disabled {
  opacity: 0.3;
}

// ******************************************
//  10. Sidebar
// ******************************************
@import "partials/runtime-sidebar";

// ******************************************
//  11. Related Module
// ******************************************

.related-mod {
  margin-bottom: 50px;
  margin-top: 50px;
  border-top: none;
  background-color: lighten($related-green, 40%);
  border: 1px solid lighten($related-green, 30%);
  @extend .mod-border-rounded;
  @extend .cf;
}

.related-hdr {
  // background-color: $med-blue;
  background-color: $related-green;
  color: #fff;
  font-size: 18px;
  padding: 6px 13px;
  margin-bottom: 8px;
  @include box-shadow(0 2px 5px -1px $black-15);
  //@extend .drk-text-shadow;
}

.related-bd {
  padding: 16px 26px 30px;
  @extend .cf;
}

.related-items {
  @extend .cf;
}
/* ... */

